--- a/package.json
+++ b/package.json
@@ -154,6 +154,7 @@
   "devDependencies": {
     "@types/chai": "4.1.7",
     "@types/fs-extra": "^5.0.5",
+    "@types/lodash": "^4.14.123",
     "@types/mocha": "^5.2.6",
     "@types/node": "^11.10.4",
     "chai": "^4.2.0",
@@ -172,8 +173,10 @@
     "@octokit/rest": "^16.16.4",
     "adm-zip": "^0.4.13",
     "fs-extra": "^7.0.1",
+    "html-loader": "^0.5.5",
     "https-proxy-agent": "^2.2.1",
     "lockfile": "^1.0.4",
+    "lodash": "^4.17.11",
     "temp": "^0.9.0"
   }
 }
