--- a/package.json
+++ b/package.json
@@ -153,9 +153,11 @@
   },
   "devDependencies": {
     "@types/chai": "4.1.7",
+    "@types/express": "^4.16.1",
     "@types/fs-extra": "^5.0.5",
     "@types/mocha": "^5.2.6",
     "@types/node": "^11.10.4",
+    "@types/node-fetch": "^2.1.7",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^2.0.0",
     "mocha": "^6.0.0",
@@ -171,9 +173,12 @@
   "dependencies": {
     "@octokit/rest": "^16.16.4",
     "adm-zip": "^0.4.13",
+    "express": "^4.16.4",
     "fs-extra": "^7.0.1",
+    "html-loader": "^0.5.5",
     "https-proxy-agent": "^2.2.1",
     "lockfile": "^1.0.4",
+    "node-fetch": "^2.3.0",
     "temp": "^0.9.0"
   }
 }
