--- a/package.json
+++ b/package.json
@@ -143,9 +143,9 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run tslint-check && webpack --mode production",
-    "compile": "webpack",
-    "watch": "webpack --mode development --watch",
+    "vscode:prepublish": "npm run tslint-check && gulp compile",
+    "compile": "gulp compile",
+    "watch": "gulp watch",
     "postinstall": "node ./node_modules/vscode/bin/install",
     "tslint-check": "tslint -c ./tslint.json ./src/**/*.ts ./src/*.ts",
     "format": "prettier --write './src/**/*.ts'",
@@ -154,19 +154,25 @@
   "devDependencies": {
     "@types/chai": "4.1.7",
     "@types/fs-extra": "^5.0.5",
+    "@types/gulp": "^4.0.6",
+    "@types/gulp-concat": "^0.0.32",
+    "@types/gulp-typescript": "^2.13.0",
+    "@types/gulp-uglify": "^3.0.6",
     "@types/mocha": "^5.2.6",
     "@types/node": "^11.10.4",
     "chai": "^4.2.0",
-    "clean-webpack-plugin": "^2.0.0",
+    "gulp": "^4.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-typescript": "^5.0.1",
+    "gulp-uglify": "^3.0.2",
     "mocha": "^6.0.0",
     "prettier": "^1.16.4",
     "ts-loader": "^5.3.3",
+    "ts-node": "^8.0.3",
     "tslint": "^5.13.1",
     "tslint-plugin-prettier": "^2.0.1",
-    "typescript": "^3.3.3333",
-    "vscode": "^1.1.30",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3"
+    "typescript": "^3.4.1",
+    "vscode": "^1.1.30"
   },
   "dependencies": {
     "@octokit/rest": "^16.16.4",
