Add source maps and remove concat

--- a/package.json
+++ b/package.json
@@ -145,7 +145,7 @@
   "scripts": {
     "vscode:prepublish": "npm run tslint-check && gulp compile",
     "compile": "gulp compile",
-    "watch": "gulp watch",
+    "watch": "gulp watchdev",
     "postinstall": "node ./node_modules/vscode/bin/install",
     "tslint-check": "tslint -c ./tslint.json ./src/**/*.ts ./src/*.ts",
     "format": "prettier --write './src/**/*.ts'",
@@ -155,14 +155,14 @@
     "@types/chai": "4.1.7",
     "@types/fs-extra": "^5.0.5",
     "@types/gulp": "^4.0.6",
-    "@types/gulp-concat": "^0.0.32",
+    "@types/gulp-sourcemaps": "^0.0.32",
     "@types/gulp-typescript": "^2.13.0",
     "@types/gulp-uglify": "^3.0.6",
     "@types/mocha": "^5.2.6",
     "@types/node": "^11.10.4",
     "chai": "^4.2.0",
     "gulp": "^4.0.0",
-    "gulp-concat": "^2.6.1",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-typescript": "^5.0.1",
     "gulp-uglify": "^3.0.2",
     "mocha": "^6.0.0",
