Ignore node_modules and some other files

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -7,3 +7,10 @@ src/**
 .gitignore
 tsconfig.json
 vsc-extension-quickstart.md
+node_modules
+.github
+debug.log
+scripts
+tslint.json
+webpack.config.js
+*.log
