--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "code-settings-sync",
   "displayName": "Settings Sync",
   "description": "Synchronize Settings, Snippets, Themes, File Icons, Launch, Keybindings, Workspaces and Extensions Across Multiple Machines Using GitHub Gist.",
-  "version": "3.2.7",
+  "version": "3.2.8",
   "icon": "images/cloud.png",
   "publisher": "Shan",
   "author": {
@@ -46,7 +46,7 @@
     "email": "shanalikhan@hotmail.com"
   },
   "engines": {
-    "vscode": "^1.31.1"
+    "vscode": "^1.32.3"
   },
   "categories": [
     "Other"
@@ -153,24 +153,25 @@
   },
   "devDependencies": {
     "@types/chai": "4.1.7",
+    "@types/chokidar": "^2.1.3",
     "@types/fs-extra": "^5.0.5",
     "@types/mocha": "^5.2.6",
-    "@types/node": "^11.10.4",
+    "@types/node": "^11.13.0",
     "chai": "^4.2.0",
-    "clean-webpack-plugin": "^2.0.0",
-    "mocha": "^6.0.0",
+    "clean-webpack-plugin": "^2.0.1",
+    "mocha": "^6.0.2",
     "prettier": "^1.16.4",
     "ts-loader": "^5.3.3",
-    "tslint": "^5.13.1",
+    "tslint": "^5.15.0",
     "tslint-plugin-prettier": "^2.0.1",
-    "typescript": "^3.3.3333",
-    "vscode": "^1.1.30",
+    "typescript": "^3.4.1",
+    "vscode": "^1.1.33",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3"
+    "webpack-cli": "^3.3.0"
   },
   "dependencies": {
     "@octokit/rest": "^16.16.4",
-    "adm-zip": "^0.4.13",
+    "chokidar": "^2.1.5",
     "fs-extra": "^7.0.1",
     "https-proxy-agent": "^2.2.1",
     "lockfile": "^1.0.4",
