--- a/package.json
+++ b/package.json
@@ -171,12 +171,14 @@
     "@octokit/rest": "^16.16.4",
     "adm-zip": "^0.4.13",
     "chokidar": "^2.1.5",
+    "const": "^1.0.0",
     "express": "^4.16.4",
     "fs-extra": "^7.0.1",
     "https-proxy-agent": "^2.2.1",
     "lockfile": "^1.0.4",
     "lodash": "^4.17.11",
     "node-fetch": "^2.3.0",
-    "temp": "^0.9.0"
+    "temp": "^0.9.0",
+    "webpack-node-externals": "^1.7.2"
   }
 }
