--- a/package.json
+++ b/package.json
@@ -143,9 +143,9 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run tslint-check && webpack --mode production",
-    "compile": "webpack",
-    "watch": "webpack --mode development --watch",
+    "vscode:prepublish": "npm run tslint-check && webpack --config configs/webpack.production.config.js",
+    "compile": "webpack --config configs/webpack.development.config.js",
+    "watch": "webpack --config configs/webpack.development.config.js --watch",
     "postinstall": "node ./node_modules/vscode/bin/install",
     "tslint-check": "tslint -c ./tslint.json ./src/**/*.ts ./src/*.ts",
     "format": "prettier --write './src/**/*.ts'",
@@ -166,7 +166,8 @@
     "typescript": "^3.4.1",
     "vscode": "^1.1.33",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0"
+    "webpack-cli": "^3.3.0",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "@octokit/rest": "^16.16.4",
