--- a/package.json
+++ b/package.json
@@ -155,6 +155,7 @@
     "@types/chai": "4.1.7",
     "@types/chokidar": "^2.1.3",
     "@types/fs-extra": "^5.0.5",
+    "@types/lockfile": "^1.0.1",
     "@types/mocha": "^5.2.6",
     "@types/node": "^11.13.0",
     "chai": "^4.2.0",
