--- a/package.json
+++ b/package.json
@@ -153,9 +153,11 @@
   },
   "devDependencies": {
     "@types/chai": "4.1.7",
+    "@types/form-data": "^2.2.1",
     "@types/fs-extra": "^5.0.5",
     "@types/mocha": "^5.2.6",
     "@types/node": "^11.13.0",
+    "@types/node-fetch": "^2.3.2",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^2.0.1",
     "mocha": "^6.0.2",
@@ -171,9 +173,11 @@
   },
   "dependencies": {
     "@octokit/rest": "^16.23.2",
+    "form-data": "^2.3.3",
     "fs-extra": "^7.0.1",
     "https-proxy-agent": "^2.2.1",
     "lockfile": "^1.0.4",
+    "node-fetch": "^2.3.0",
     "temp": "^0.9.0",
     "vscode-chokidar": "^1.6.5"
   }
