--- a/package.json
+++ b/package.json
@@ -154,9 +154,12 @@
   },
   "devDependencies": {
     "@types/chai": "4.1.7",
+    "@types/express": "^4.16.1",
     "@types/fs-extra": "^5.0.5",
+    "@types/lodash": "^4.14.123",
     "@types/mocha": "^5.2.6",
     "@types/node": "^11.13.0",
+    "@types/node-fetch": "^2.3.3",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^2.0.1",
     "mocha": "^6.0.2",
@@ -172,10 +175,16 @@
   },
   "dependencies": {
     "@octokit/rest": "^16.23.2",
+    "adm-zip": "^0.4.13",
+    "const": "^1.0.0",
+    "express": "^4.16.4",
     "fs-extra": "^7.0.1",
     "https-proxy-agent": "^2.2.1",
     "lockfile": "^1.0.4",
+    "lodash": "^4.17.11",
+    "node-fetch": "^2.5.0",
     "temp": "^0.9.0",
-    "vscode-chokidar": "^1.6.5"
+    "vscode-chokidar": "^1.6.5",
+    "webpack-node-externals": "^1.7.2"
   }
 }
