Revert accidental change

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
       "label": "build",
       "type": "shell",
       "command": "npm",
-      "args": ["run", "watch", "--loglevel", "silent"],
+      "args": ["run", "compile", "--loglevel", "silent"],
       "problemMatcher": "$tsc-watch"
     },
     {
