--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     "@types/fs-extra": "^8.0.0",
     "@types/mocha": "^5.2.6",
     "@types/node": "^12.0.9",
+    "@types/recursive-readdir": "^2.2.0",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "mocha": "^6.0.2",
@@ -180,6 +181,7 @@
     "fs-extra": "^8.0.1",
     "https-proxy-agent": "^2.2.1",
     "lockfile": "^1.0.4",
+    "recursive-readdir": "^2.2.2",
     "temp": "^0.9.0",
     "vscode-chokidar": "^1.6.5"
   }
