--- a/release-notes.json
+++ b/release-notes.json
@@ -1,32 +1,52 @@
 {
   "changes": [
     {
-      "details": "Github Token is now hidden from Summary",
+      "details": "Add content security policy for webviews",
       "type": "NEW",
-      "color": "success"
+      "color": "success",
+      "author": "ParkourKarthik",
+      "pullRequest": "1020"
     },
     {
-      "details": "Only Show Share GIST Dialog on the creation of Public Gist",
+      "details": "Improve UX for the Force Upload",
       "type": "NEW",
-      "color": "success"
+      "color": "success",
+      "author": "karl-lunarg",
+      "pullRequest": "1042"
     },
     {
-      "details": "Gist List UI Disppear Fixed",
+      "details": "Extension always asks to enable Force Upload",
+      "type": "FIX",
+      "color": "danger",
+      "author": "karl-lunarg",
+      "pullRequest": "1026"
+    },
+    {
+      "details": "Languages, Icon and Wiki Improved",
+      "type": "NEW",
+      "color": "success"
+    }, 
+    {
+      "details": "Github Gist Name Consistency across extension",
+      "type": "FIX",
+      "color": "danger"
+    }, 
+    {
+      "details": "Snippets Sync. Fixed",
       "type": "FIX",
       "color": "danger"
     },
     {
-      "details": "Sync Pragma Improved",
+      "details": "Share Settings Dialog Fixed",
       "type": "FIX",
-      "color": "danger",
-      "author": "protium-dev",
-      "pullRequest": "1012"
+      "color": "danger"
     },
     {
-      "details": "Languages Improved.",
+      "details": "Github Sync Improved",
       "type": "FIX",
       "color": "danger"
     }
+    
   ],
-  "currentVersion": "v3.4.2"
+  "currentVersion": "v3.4.3"
 }
