Adopt the new extensionKind form
Pls see #1089

--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "workspace-sync",
     "multi-root ready"
   ],
-  "extensionKind": "ui",
+  "extensionKind": ["ui"],
   "activationEvents": [
     "*"
   ],
