Use typescript from node_modules for test_build

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,8 +13,8 @@
     {
       "label": "test_build",
       "type": "shell",
-      "command": "tsc",
-      "args": ["-p", "./"]
+      "command": "npx",
+      "args": ["tsc", "-p", "./"]
     }
   ]
 }
