--- a/package.json
+++ b/package.json
@@ -158,6 +158,7 @@
     "@types/chai": "4.2.5",
     "@types/express": "^4.17.2",
     "@types/fs-extra": "^8.0.1",
+    "@types/lockfile": "^1.0.1",
     "@types/lodash": "^4.14.147",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.12.7",
@@ -169,6 +170,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
     "mocha": "^6.2.2",
     "prettier": "^1.19.1",
