--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -7,6 +7,7 @@ settings:
 
 extends:
   - eslint:recommended
+  - plugin:eslint-comments/recommended
   - plugin:import/errors
   - plugin:import/warnings
   - plugin:import/typescript
