--- a/package.json
+++ b/package.json
@@ -170,6 +170,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
     "mocha": "^6.2.2",
