--- a/package.json
+++ b/package.json
@@ -177,6 +177,7 @@
   "dependencies": {
     "@octokit/rest": "^16.23.2",
     "adm-zip": "^0.4.13",
+    "chokidar": "^3.5.3",
     "const": "^1.0.0",
     "express": "^4.16.4",
     "fs-extra": "^8.0.1",
@@ -185,7 +186,6 @@
     "lodash": "^4.17.15",
     "node-fetch": "^2.5.0",
     "recursive-readdir": "^2.2.2",
-    "temp": "^0.9.0",
-    "vscode-chokidar": "^2.1.6"
+    "temp": "^0.9.0"
   }
 }
