--- a/package.json
+++ b/package.json
@@ -59,7 +59,9 @@
     "workspace-sync",
     "multi-root ready"
   ],
-  "extensionKind": "ui",
+  "extensionKind": [
+    "ui"
+  ],
   "activationEvents": [
     "*"
   ],
@@ -144,41 +146,46 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run tslint-check && webpack --config configs/webpack.production.config.js",
+    "vscode:prepublish": "npm run lint && webpack --config configs/webpack.production.config.js",
     "compile": "webpack --config configs/webpack.development.config.js",
     "watch": "webpack --config configs/webpack.development.config.js --watch",
     "postinstall": "node ./node_modules/vscode/bin/install",
-    "tslint-check": "tslint -c ./tslint.json ./src/**/*.ts ./src/*.ts",
+    "lint": "eslint . --ext /src/**/*.ts ./src/*.ts",
     "format": "prettier --write './src/**/*.ts'",
-    "test": "npm run tslint-check && tsc -p ./ && mocha --recursive \"./out/test/**/*.js\""
+    "test": "npm run lint&& tsc -p ./ && mocha --recursive \"./out/test/**/*.js\""
   },
   "devDependencies": {
     "@types/chai": "4.2.1",
-    "@types/express": "^4.16.1",
-    "@types/lodash": "^4.14.123",
-    "@types/node-fetch": "^2.3.3",
+    "@types/express": "^4.17.14",
     "@types/fs-extra": "^8.0.0",
+    "@types/lodash": "^4.14.123",
     "@types/mocha": "^5.2.6",
     "@types/node": "^12.0.9",
+    "@types/node-fetch": "^2.3.3",
     "@types/recursive-readdir": "^2.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
     "chai": "^4.2.0",
-    "clean-webpack-plugin": "^3.0.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "eslint": "^8.28.0",
+    "eslint-plugin-jsdoc": "^39.6.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
     "mocha": "^6.0.2",
     "prettier": "^1.16.4",
-    "ts-loader": "^5.3.3",
-    "tslint": "^5.15.0",
-    "tslint-plugin-prettier": "^2.0.1",
-    "typescript": "^3.4.1",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.3",
     "vscode": "^1.1.33",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-merge": "^4.2.1"
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.0",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "@octokit/rest": "^16.23.2",
     "adm-zip": "^0.4.13",
     "const": "^1.0.0",
-    "express": "^4.16.4",
+    "express": "^4.17.14",
     "fs-extra": "^8.0.1",
     "https-proxy-agent": "^2.2.1",
     "lockfile": "^1.0.4",
@@ -186,6 +193,10 @@
     "node-fetch": "^2.5.0",
     "recursive-readdir": "^2.2.2",
     "temp": "^0.9.0",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "tslint-plugin-prettier": "^2.3.0",
+    "tslint-to-eslint-config": "^2.13.3",
     "vscode-chokidar": "^2.1.6"
   }
 }
